[tool.poetry]
name = "flu-shot"
version = "0.1.0"
description = ""
authors = ["Wai Yan Lam <waiyan0304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.4.9"
pandas = "^2.3.2"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
